--- a/test/password-field-validation.html
+++ b/test/password-field-validation.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
+  <test-fixture id="password-field">
     <template>
       <vaadin-password-field></vaadin-password-field>
     </template>
@@ -55,7 +55,7 @@
     let passwordField;
 
     beforeEach(() => {
-      passwordField = fixture('basic');
+      passwordField = fixture('password-field');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -77,6 +77,24 @@
       expect(validatedSpy.calledOnce).to.be.true;
       const event = validatedSpy.firstCall.args[0];
       expect(event.detail.valid).to.be.false;
+    });
+  });
+  describe('invalid cannot be set to false', () => {
+    let passwordField;
+
+    beforeEach(async() => {
+      passwordField = fixture('password-field');
+      passwordField._shouldSetInvalid = (invalid) => invalid;
+      await nextRender();
+    });
+
+    it('should set invalid only when it is true', async() => {
+      passwordField.required = true;
+      passwordField.validate();
+      expect(passwordField.invalid).to.be.true;
+      passwordField.value = 'value';
+      passwordField.validate();
+      expect(passwordField.invalid).to.be.true;
     });
   });
 </script>
