--- a/test/number-field-validation.html
+++ b/test/number-field-validation.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
- <test-fixture id="basic">
+ <test-fixture id="number-field">
     <template>
       <vaadin-number-field></vaadin-number-field>
     </template>
@@ -55,7 +55,7 @@
     let numberField;
 
     beforeEach(() => {
-      numberField = fixture('basic');
+      numberField = fixture('number-field');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -77,6 +77,24 @@
       expect(validatedSpy.calledOnce).to.be.true;
       const event = validatedSpy.firstCall.args[0];
       expect(event.detail.valid).to.be.false;
+    });
+  });
+  describe('invalid cannot be set to false', () => {
+    let numberField;
+
+    beforeEach(async() => {
+      numberField = fixture('number-field');
+      numberField._shouldSetInvalid = (invalid) => invalid;
+      await nextRender();
+    });
+
+    it('should set invalid only when it is true', async() => {
+      numberField.required = true;
+      numberField.validate();
+      expect(numberField.invalid).to.be.true;
+      numberField.value = 5;
+      numberField.validate();
+      expect(numberField.invalid).to.be.true;
     });
   });
 </script>
