--- a/test/text-area-validation.html
+++ b/test/text-area-validation.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
+  <test-fixture id="text-area">
     <template>
       <vaadin-text-area></vaadin-text-area>
     </template>
@@ -55,7 +55,7 @@
     let textArea;
 
     beforeEach(() => {
-      textArea = fixture('basic');
+      textArea = fixture('text-area');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -77,6 +77,24 @@
       expect(validatedSpy.calledOnce).to.be.true;
       const event = validatedSpy.firstCall.args[0];
       expect(event.detail.valid).to.be.false;
+    });
+  });
+  describe('invalid cannot be set to false', () => {
+    let textArea;
+
+    beforeEach(async() => {
+      textArea = fixture('text-area');
+      textArea._shouldSetInvalid = (invalid) => invalid;
+      await nextRender();
+    });
+
+    it('should set invalid only when it is true', async() => {
+      textArea.required = true;
+      textArea.validate();
+      expect(textArea.invalid).to.be.true;
+      textArea.value = 'value';
+      textArea.validate();
+      expect(textArea.invalid).to.be.true;
     });
   });
 </script>
