--- a/test/text-field-validation.html
+++ b/test/text-field-validation.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <test-fixture id="basic">
+  <test-fixture id="text-field">
     <template>
       <vaadin-text-field></vaadin-text-field>
     </template>
@@ -55,7 +55,7 @@
     let textField;
 
     beforeEach(() => {
-      textField = fixture('basic');
+      textField = fixture('text-field');
     });
 
     it('should fire a validated event on validation success', () => {
@@ -77,6 +77,24 @@
       expect(validatedSpy.calledOnce).to.be.true;
       const event = validatedSpy.firstCall.args[0];
       expect(event.detail.valid).to.be.false;
+    });
+  });
+  describe('invalid cannot be set to false', () => {
+    let textField;
+
+    beforeEach(async() => {
+      textField = fixture('text-field');
+      textField._shouldSetInvalid = (invalid) => invalid;
+      await nextRender();
+    });
+
+    it('should set invalid only when it is true', async() => {
+      textField.required = true;
+      textField.validate();
+      expect(textField.invalid).to.be.true;
+      textField.value = 'value';
+      textField.validate();
+      expect(textField.invalid).to.be.true;
     });
   });
 </script>
