--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -984,5 +984,13 @@ This program is available under Apache License Version 2.0, available at https:/
      *
      * @event iron-resize
      */
+
+    /**
+     * Fired whenever the field is validated.
+     *
+     * @event validated
+     * @param {Object} detail
+     * @param {boolean} detail.valid the result of the validation.
+     */
   };
 </script>
