--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -498,7 +498,7 @@ This program is available under Apache License Version 2.0, available at https:/
         this.value = this.inputElement.value = '';
       }
 
-      if (this.invalid && oldVal !== undefined) {
+      if (this.invalid) {
         this.validate();
       }
     }
