--- a/test/helpers.html
+++ b/test/helpers.html
@@ -22,5 +22,11 @@
       Polymer.RenderStatus.afterNextRender(element, resolve);
     });
   };
+
+  window.nextFrame = (element) => {
+    return new Promise(resolve =>
+      requestAnimationFrame(resolve));
+  };
+
 </script>
 </body>
