--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -418,6 +418,21 @@ This program is available under Apache License Version 2.0, available at https:/
 
           return super.checkValidity();
         }
+
+        /**
+         * Native [type=number] inputs don't update their value
+         * when you are entering input that the browser is unable to parse
+         * e.g. "--5", hence we have to override this method from `InputMixin`
+         * so that, when value is empty, it would additionally check
+         * for bad input based on the native `validity.badInput` property.
+         *
+         * @param {InputEvent} event
+         * @protected
+         * @override
+         */
+        _setHasInputValue(event) {
+          this._hasInputValue = event.target.value.length > 0 || event.target.validity.badInput;
+        }
       }
 
       window.customElements.define(NumberFieldElement.is, NumberFieldElement);
