--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -286,7 +286,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         /** @private */
         _setValue(value) {
-          this.value = this.inputElement.value = String(parseFloat(value));
+          this.value = this._inputElementValue = String(parseFloat(value));
           this.dispatchEvent(new CustomEvent('change', {bubbles: true}));
         }
 
