--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -297,7 +297,11 @@ This program is available under Apache License Version 2.0, available at https:/
         },
 
         /**
-         * When true, the input element has a non-empty value entered by the user.
+         * Whether the input element has user input.
+         *
+         * Note, the property indicates true only if the input has been entered by the user.
+         * In the case of programmatic changes, the property must be reset to false.
+         *
          * @protected
          */
         _hasInputValue: {
@@ -824,6 +828,7 @@ This program is available under Apache License Version 2.0, available at https:/
     }
 
     clear() {
+      this._hasInputValue = false;
       this.value = '';
     }
 
