--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -297,10 +297,7 @@ This program is available under Apache License Version 2.0, available at https:/
         },
 
         /**
-         * Whether the input element has user input.
-         *
-         * Note, the property indicates true only if the input has been entered by the user.
-         * In the case of programmatic changes, the property must be reset to false.
+         * Whether the input element has a non-empty value.
          *
          * @protected
          */
