--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -297,7 +297,8 @@ This program is available under Apache License Version 2.0, available at https:/
         },
 
         /**
-         * When true, the input element has a non-empty value entered by the user.
+         * Whether the input element has a non-empty value.
+         *
          * @protected
          */
         _hasInputValue: {
@@ -824,6 +825,7 @@ This program is available under Apache License Version 2.0, available at https:/
     }
 
     clear() {
+      this._hasInputValue = false;
       this.value = '';
     }
 
