--- a/test/number-field-events.html
+++ b/test/number-field-events.html
@@ -17,11 +17,6 @@
       <vaadin-number-field></vaadin-number-field>
     </template>
   </test-fixture>
-  <test-fixture id="number-field-with-clear-button">
-    <template>
-      <vaadin-number-field clear-button-visible></vaadin-number-field>
-    </template>
-  </test-fixture>
   <script>
     describe('events', () => {
       let numberField, input, hasInputValueChangedSpy, valueChangedSpy;
@@ -79,14 +74,15 @@
         });
       });
 
-      describe('has-input-value-changed event on clear', () => {
+      describe('has-input-value-changed event with clear button', () => {
         beforeEach(async() => {
           hasInputValueChangedSpy = sinon.spy();
           valueChangedSpy = sinon.spy();
-          numberField = fixture('number-field-with-clear-button');
+          numberField = fixture('number-field');
           numberField.addEventListener('has-input-value-changed', hasInputValueChangedSpy);
           numberField.addEventListener('value-changed', valueChangedSpy);
           input = numberField.inputElement;
+          numberField.clearButtonVisible = true;
         });
     
         describe('with user input', () => {
