--- a/test/password-field-events.html
+++ b/test/password-field-events.html
@@ -17,11 +17,6 @@
       <vaadin-password-field></vaadin-password-field>
     </template>
   </test-fixture>
-  <test-fixture id="password-field-with-clear-button">
-    <template>
-      <vaadin-password-field clear-button-visible></vaadin-password-field>
-    </template>
-  </test-fixture>
   <script>
     describe('events', () => {
       let passwordField, input, hasInputValueChangedSpy, valueChangedSpy;
@@ -79,14 +74,15 @@
         });
       });
 
-      describe('has-input-value-changed event on clear', () => {
+      describe('has-input-value-changed event with clear button', () => {
         beforeEach(async() => {
           hasInputValueChangedSpy = sinon.spy();
           valueChangedSpy = sinon.spy();
-          passwordField = fixture('password-field-with-clear-button');
+          passwordField = fixture('password-field');
           passwordField.addEventListener('has-input-value-changed', hasInputValueChangedSpy);
           passwordField.addEventListener('value-changed', valueChangedSpy);
           input = passwordField.inputElement;
+          passwordField.clearButtonVisible = true;
         });
     
         describe('with user input', () => {
